policies/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: appa-appb
  namespace: default
  labels:
    app: projet-1
    pipeline: github
spec:
  podSelector:
    matchLabels:
      app: python-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: appb-gitlab
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: appb-gitlab
