policies/label-cr.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: labels-app-pipeline-constraints
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
    excludedNamespaces: [
      "kube-system",
      "gatekeeper-system",
      "argocd"
    ]
  parameters:
    message: "All pods and deployments must have app labels and pipeline label with one of the values 'github' or 'gitlab'"
    labels:
      - key: app
        allowedRegex: "[a-zA-Z0-9-_]"
      - key: pipeline
        allowedRegex: "github|gilab"
